--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+@theme {
+  --breakpoint-3xl: 120rem;
+  --breakpoint-4xl: 240rem;
+}
+
 @custom-variant dark (&:where(.dark, .dark *));
 
 :root {
