--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,15 @@
 @theme {
   --breakpoint-3xl: 120rem;
   --breakpoint-4xl: 240rem;
+  --color-light-black: #191919;
+  --color-dark-black: #000000;
+  --color-gray-5: #393939;
+  --color-gray-4: #636363;
+  --color-gray-3: #7c7c7c;
+  --color-gray-2: #bcbcbc;
+  --color-gray-1: #dadada;
+  --color-gray-0: #e4e4e4;
+  --color-spline-blue: #1c5bff;
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
