--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@
   --color-gray-1: #dadada;
   --color-gray-0: #e4e4e4;
   --color-spline-blue: #1c5bff;
+  --color-dark-text: #a3a3a3;
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
