--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,3 +77,19 @@ input[type='range']::-moz-range-thumb {
   cursor: pointer;
   border: none;
 }
+
+/* Traffit styles */
+
+#traffit-an-list-xtxrxaxfxixtx2x0x1x6x,
+#traffit-an-filters-xtxrxaxfxixtx2x0x1x6x {
+  width: 100%;
+  padding: 0 !important;
+  max-width: calc(100% - 32px);
+}
+
+#xtxrxaxfxixtx2x0x1x6x-list-div {
+  margin: 0 auto !important;
+  padding: 0;
+  width: 100%;
+  font-family: var(--font-sans) !important;
+}
