--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,7 +165,7 @@ input[type='range']::-moz-range-thumb {
 
 /* Traffit styles */
 
-#traffit-an-list-xtxrxaxfxixtx2x0x1x6x,
+/* #traffit-an-list-xtxrxaxfxixtx2x0x1x6x,
 #traffit-an-filters-xtxrxaxfxixtx2x0x1x6x {
   width: 100%;
   padding: 0 !important;
@@ -177,4 +177,4 @@ input[type='range']::-moz-range-thumb {
   padding: 0;
   width: 100%;
   font-family: var(--font-sans) !important;
-}
+} */
