--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
   --color-gray-2: #bcbcbc;
   --color-gray-1: #dadada;
   --color-gray-0: #e4e4e4;
-  --color-spline-blue: #1c5bff;
+  --color-spline-blue: #0037c3;
   --color-dark-text: #a3a3a3;
 }
 
