--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --breakpoint-5k: 5120px;
   --color-light-black: #191919;
   --color-dark-black: #000000;
+  --color-gray-6: #272727;
   --color-gray-5: #393939;
   --color-gray-4: #636363;
   --color-gray-3: #7c7c7c;
